Fix nowrap

--- a/static/style.css
+++ b/static/style.css
@@ -110,6 +110,7 @@ a:hover{
     }
 }
 
+.value{ white-space: nowrap; }
 .value:not(:last-child)::after {
     content: '\00B7'
 }
